#187: Add support for Scenario outlines custom name strategies