@@ -9,7 +9,7 @@ import io.reactivex.Maybe;
 import net.thucydides.model.domain.TestOutcome;
 import net.thucydides.model.domain.TestStep;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * Recorder aware of parameterized BDD style test specific handling
@@ -32,16 +32,17 @@ public class BddDataDriven extends TestRecorder {
                 .withDescription(out.getUserStory().getNarrative())
                 .build();
         Maybe<String> id = suiteStorage.start(out.getUserStory().getId(), () -> launch.startTestItem(startStory));
+        TestNameTransformer testNameTransformer = ReportIntegrationConfig.get().getTestNameTransformer();
         // Start test
         StartTestItemRQ startScenario = new StartEventBuilder(ItemType.STEP)
-                .withName(out.getName())
+                .withName(testNameTransformer.transformName(out, last))
                 .withStartTime(currentTest.getStartTime())
                 .withParameters(out.getDataTable().row(last))
                 .withTags(out.getTags())
                 .build();
         Maybe<String> testId = launch.startTestItem(id, startScenario);
         // Steps
-        proceedSteps(testId, Arrays.asList(currentTest));
+        proceedSteps(testId, List.of(currentTest));
         // Stop test
         FinishTestItemRQ finishScenario = new FinishEventBuilder()
                 .withStatus(Status.mapTo(currentTest.getResult()))
